fixed up description modal to be able to edit a current description and squashed bugs with it

--- a/src/globalStyles/_globalStyles.scss
+++ b/src/globalStyles/_globalStyles.scss
@@ -30,3 +30,9 @@ body,
     display: none;
 }
 
+span.category {
+    font-size: 1rem;
+    text-transform: uppercase;
+    color: #f8598b;
+    font-weight: 600;
+}
